--- a/.editorconfig
+++ b/.editorconfig
@@ -1,8 +1,9 @@
 # https://editorconfig.org/
 # Added because otherwise github.com uses a default tab size of 8.
 
-[*.{js,jsx,html,sass,scss,css,json,svg}]
+[*.{js,jsx,ts,tsx,html,sass,scss,css,json,svg}]
 charset = utf-8
 indent_style = space
 indent_size = 4
 trim_trailing_whitespace = true
+insert_final_newline = true
