--- a/package.json
+++ b/package.json
@@ -1,38 +1,44 @@
 {
-  "name": "svgo-autocrop",
-  "version": "1.1.2",
-  "description": "SVGO plugin that reduces viewBox to minimum possible size so no wasted transparent space around svg",
-  "main": "index.js",
-  "bin": "./bin/svgo",
-  "keywords": [
-    "svgo",
-    "svg",
-    "optimize",
-    "minify",
-	"autocrop"
-  ],
-  "author": {
-    "name": "Glennos",
-    "url": "https://github.com/glennosss"
-  },
-  "repository": {
-    "type": "git",
-    "url": "https://github.com/glennosss/svgo-autocrop.git"
-  },
-  "homepage": "https://github.com/glennosss/svgo-autocrop/",
-  "scripts": {
-    "test": "jest --maxWorkers=4",
-    "testfile": "node node_modules/jest/bin/jest.js -i",
-    "testname": "node node_modules/jest/bin/jest.js -t"
-  },
-  "license": "MIT",
-  "dependencies": {
-    "puppeteer": "*",
-    "jimp": "^0.16.1",
-    "svgo": "^2.8.0",
-    "svg-pathdata": "^6.0.3"
-  },
-  "devDependencies": {
-    "jest": "^27.2.5"
-  }
+	"name": "svgo-autocrop",
+	"version": "1.1.2",
+	"description": "SVGO plugin that reduces viewBox to minimum possible size so no wasted transparent space around svg",
+	"main": "index.js",
+	"bin": "./bin/svgo",
+	"keywords": [
+		"svgo",
+		"svg",
+		"optimize",
+		"minify",
+		"autocrop"
+	],
+	"author": {
+		"name": "Glennos",
+		"url": "https://github.com/glennosss"
+	},
+	"repository": {
+		"type": "git",
+		"url": "https://github.com/glennosss/svgo-autocrop.git"
+	},
+	"homepage": "https://github.com/glennosss/svgo-autocrop/",
+	"scripts": {
+		"fmt": "oxfmt .",
+		"fmt:check": "oxfmt --check .",
+		"lint": "oxlint . --jest-plugin --node-plugin",
+		"lint:fix": "oxlint . --jest-plugin --node-plugin --fix",
+		"test": "jest --maxWorkers=4",
+		"testfile": "node node_modules/jest/bin/jest.js -i",
+		"testname": "node node_modules/jest/bin/jest.js -t"
+	},
+	"license": "MIT",
+	"dependencies": {
+		"jimp": "^0.16.1",
+		"puppeteer": "*",
+		"svg-pathdata": "^6.0.3",
+		"svgo": "^2.8.0"
+	},
+	"devDependencies": {
+		"jest": "^27.2.5",
+		"oxfmt": "^0.32.0",
+		"oxlint": "^1.47.0"
+	}
 }
