--- a/package.json
+++ b/package.json
@@ -1,6 +1,7 @@
 {
 	"name": "svgo-autocrop",
 	"version": "1.1.2",
+	"packageManager": "pnpm@10.20.0",
 	"description": "SVGO plugin that reduces viewBox to minimum possible size so no wasted transparent space around svg",
 	"main": "index.js",
 	"bin": "./bin/svgo",
