Start using advanced oxlint plugins, silence intellij warnings

--- a/.oxlintrc.json
+++ b/.oxlintrc.json
@@ -1,5 +1,6 @@
 {
 	"$schema": "./node_modules/oxlint/configuration_schema.json",
+	"plugins": ["eslint", "unicorn", "typescript", "oxc", "import", "node", "promise", "jest"],
 	"env": {
 		"builtin": true
 	},
