--- a/.editorconfig
+++ b/.editorconfig
@@ -3,7 +3,11 @@
 
 [*.{js,jsx,ts,tsx,html,sass,scss,css,json,svg}]
 charset = utf-8
-indent_style = space
+end_of_line = lf
+ij_typescript_spaces_within_imports = true
+ij_typescript_spaces_within_object_literal_braces = true
 indent_size = 4
-trim_trailing_whitespace = true
+indent_style = space
 insert_final_newline = true
+tab_width = 4
+trim_trailing_whitespace = true
