--- a/tsconfig.json
+++ b/tsconfig.json
@@ -3,12 +3,12 @@
 		"target": "ES2022",
 		"module": "CommonJS",
 		"moduleResolution": "Node",
-		"baseUrl": ".",
 		"paths": {
 			"svgo-autocrop": ["./index.ts"]
 		},
-		"strict": false,
-		"noImplicitAny": false,
+		"strict": true,
+		"strictNullChecks": true,
+		"noImplicitAny": true,
 		"esModuleInterop": true,
 		"allowSyntheticDefaultImports": true,
 		"resolveJsonModule": true,
