--- a/tsconfig.json
+++ b/tsconfig.json
@@ -22,6 +22,6 @@
         "types": ["node", "jest"],
         "noEmit": true
     },
-    "include": ["**/*.ts"],
+    "include": ["**/*.ts", "**/*.d.ts"],
     "exclude": ["node_modules", "dist"]
 }
