--- a/package.json
+++ b/package.json
@@ -1,10 +1,9 @@
 {
     "name": "svgo-autocrop",
     "version": "1.1.2",
-    "packageManager": "pnpm@10.20.0",
+    "packageManager": "pnpm@10.30.1",
     "description": "SVGO plugin that reduces viewBox to minimum possible size so no wasted transparent space around svg",
     "main": "index.ts",
-    "types": "index.d.ts",
     "keywords": [
         "svgo",
         "svg",
@@ -47,16 +46,16 @@
         "svgo": "4.0.0"
     },
     "devDependencies": {
-        "@swc-node/register": "^1.11.1",
-        "@swc/core": "^1.11.22",
-        "@swc/jest": "^0.2.39",
-        "@types/jest": "^30.0.0",
-        "@types/node": "^24.5.2",
-        "@typescript/native-preview": "7.0.0-dev.20260215.1",
+        "@swc-node/register": "1.11.1",
+        "@swc/core": "1.15.11",
+        "@swc/jest": "0.2.39",
+        "@types/jest": "30.0.0",
+        "@types/node": "25.3.0",
+        "@typescript/native-preview": "7.0.0-dev.20260220.1",
         "jest": "30.2.0",
-        "oxfmt": "^0.32.0",
-        "oxlint": "^1.47.0",
-        "oxlint-tsgolint": "^0.13.0",
+        "oxfmt": "0.34.0",
+        "oxlint": "1.49.0",
+        "oxlint-tsgolint": "0.14.2",
         "typescript": "6.0.0-dev.20260215"
     },
     "jest": {
