--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
     "name": "svgo-autocrop",
-    "version": "1.1.2",
+    "version": "1.1.3",
     "packageManager": "pnpm@10.30.1",
     "description": "SVGO plugin that reduces viewBox to minimum possible size so no wasted transparent space around svg",
     "main": "index.ts",
@@ -41,9 +41,9 @@
     },
     "license": "MIT",
     "dependencies": {
-        "@resvg/resvg-js": "2.6.2",
-        "svg-pathdata": "8.0.0",
-        "svgo": "4.0.0"
+        "@resvg/resvg-js": "^2.6.2",
+        "svg-pathdata": "^8.0.0",
+        "svgo": "^4.0.0"
     },
     "devDependencies": {
         "@swc-node/register": "1.11.1",
