--- a/tsconfig.json
+++ b/tsconfig.json
@@ -3,6 +3,7 @@
         "target": "ES2022",
         "module": "CommonJS",
         "moduleResolution": "Node",
+        "allowImportingTsExtensions": true,
         "paths": {
             "svgo-autocrop": ["./index.ts"]
         },
