--- a/package.json
+++ b/package.json
@@ -52,6 +52,7 @@
         "@types/jest": "30.0.0",
         "@types/node": "25.3.0",
         "@typescript/native-preview": "7.0.0-dev.20260220.1",
+        "eslint-plugin-jsdoc": "62.7.0",
         "jest": "30.2.0",
         "oxfmt": "0.34.0",
         "oxlint": "1.49.0",
